[tool.poetry]
name = "whisper"
version = "20240930"
description = "Robust Speech Recognition via Large-Scale Weak Supervision"
authors = ["OpenAI <contact@openai.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chuehnone/whisper"
repository = "https://github.com/chuehnone/whisper"
keywords = ["speech recognition", "AI", "machine learning"]

[tool.poetry.dependencies]
python = ">=3.8"
numba = "*"
numpy = "*"
torch = "*"
tqdm = "*"
more-itertools = "*"
tiktoken = "*"
triton = { version = ">=2.0.0", optional = true, markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }

[tool.poetry.extras]
dev = ["pytest", "scipy", "black", "flake8", "isort"]

[tool.poetry.scripts]
whisper = "whisper.transcribe:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 88
multi_line_output = 3